--- a/myCSS.css
+++ b/myCSS.css
@@ -30,7 +30,7 @@ body {
 	text-align: center;
 }
 .content {
-	background: #EEEEEE;
+	background: #BFA59A;
 	margin: 0px;
 	float: left;
 	width: 100%;
