--- a/myCSS.css
+++ b/myCSS.css
@@ -1,6 +1,8 @@
 @charset "UTF-8";
 /* This is a comment! Text here will be ignored by the browser. */
 body {
+	font: 100%/1.4 Verdana, Arial, Helvetica, sans-serif;
+     background-color: #2B2A2F;
 	margin: 0 auto;
 }
 .homePage {
