--- a/myCSS.css
+++ b/myCSS.css
@@ -2,7 +2,7 @@
 /* This is a comment! Text here will be ignored by the browser. */
 body {
 	font: 100%/1.4 Didot, serif;
-     background-color: #2B2A2F;
+     background-color: #B3797A;
 	margin: 0 auto;
 }
 
