--- a/myCSS.css
+++ b/myCSS.css
@@ -24,10 +24,10 @@ a:hover, a:active, a:focus {
 	margin: 0 auto;
 }
 .header {
-  	font-size: 40px;
+  	font-size: 60px;
 	font-weight: bold;
 	font: 100%/1.4 Didot, serif;
-	background: #B3797A;
+	background: #13508A;
 	text-align: center;
 	margin: 0px;
 	padding: 5;
