--- a/myCSS.css
+++ b/myCSS.css
@@ -2,7 +2,7 @@
 /* This is a comment! Text here will be ignored by the browser. */
 body {
 	font: 100%/1.4 Didot, serif;
-     background-color: #FFF2E0;
+     background-color: #DED6D3;
 	margin: 0 auto;
 }
 
@@ -17,7 +17,7 @@ a:hover, a:active, a:focus {
 }
 
 .homePage {
-	background: #FFF2E0;
+	background: #DED6D3;
 }
 .container {
 	width: 960px;
@@ -37,7 +37,7 @@ a:hover, a:active, a:focus {
 	
 }
 .nav {
-	background: #FFE6E6;
+	background: #FFFFFF;
 	margin: 0px;
 	padding: 5;
 	float: left;
