--- a/myCSS.css
+++ b/myCSS.css
@@ -46,14 +46,14 @@ a:hover, a:active, a:focus {
 	text-align: center;
 }
 .content {
-	background: #BFA59A;
+	background: #779E8B;
 	text-align: center;
 	margin: 0px;
 	float: left;
 	width: 100%;
 }
 .footer {
-	background: #B36A3E;
+	background: #D7A463;
 	margin: 0px;
 	float: left;
 	width: 100%;
