--- a/myCSS.css
+++ b/myCSS.css
@@ -27,6 +27,7 @@ a:hover, a:active, a:focus {
   	font-size: 60px;
 	font-weight: bold;
 	font: 100%/1.4 Didot, serif;
+	color: #FFFFFF;
 	background: #13508A;
 	text-align: center;
 	margin: 0px;
