--- a/myCSS.css
+++ b/myCSS.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /* This is a comment! Text here will be ignored by the browser. */
 body {
-	font: 100%/1.4 Didot, serif;
+	font: 100%/1.4 Emblema One;
      background-color: #DED6D3;
 	margin: 0 auto;
 }
