--- a/myCSS.css
+++ b/myCSS.css
@@ -24,10 +24,10 @@ a:hover, a:active, a:focus {
 	margin: 0 auto;
 }
 .header {
-  	font-size: 60px;
+  	font-size: 100 px;
 	font-weight: bold;
-	font: 100%/1.4 Didot, serif;
-	color: #FFFFFF;
+	font: 100%/1.4 Emblema One;
+	color: #F5F1E2;
 	background: #13508A;
 	text-align: center;
 	margin: 0px;
@@ -38,7 +38,7 @@ a:hover, a:active, a:focus {
 	
 }
 .nav {
-	background: #FFFFFF;
+	background: #F5F1E2;
 	margin: 0px;
 	padding: 5;
 	float: left;
